# c-simple-browser

./: CMakeLists.txt  README.md
headers/: parse-address.h  text.h
src/: main.c  parse-address.c  text.c
